--- a/package.json
+++ b/package.json
@@ -9,12 +9,25 @@
     "build": "pnpm --filter ./frontend build"
   },
   "dependencies": {
-    "@huggingface/inference": "^4.6.1",
-    "@langchain/community": "^0.3.49",
-    "chromadb": "^3.0.10",
+    "@huggingface/inference": "^2.7.0",
+    "@langchain/community": "^0.2.19",
+    "chromadb": "^1.8.1",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "@eslint/js": "^9.30.1",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react": "^4.6.0",
+    "autoprefixer": "^10.4.21",
+    "daisyui": "^5.0.50",
+    "eslint": "^9.30.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.3.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
+    "vite": "^7.0.4"
   }
 }
