--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "serverless-http": "^3.2.0",
     "@chroma-core/default-embed": "^0.1.8",
     "@huggingface/inference": "^4.6.1",
-    "@langchain/community": "^0.3.49",
+    "@langchain/community": "0.0.54",
     "axios": "^1.11.0",
     "chromadb": "^3.0.10",
     "cors": "^2.8.5",
