--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "chromadb": "^3.0.10",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "serverless-http": "^3.2.0"
   }
 }
