fix: simplify build command in netlify.toml by removing unnecessary prefix

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "frontend"
   publish = "dist"
-  command = "pnpm install --prefix ../backend && pnpm install && pnpm run build"
+  command = "pnpm install && pnpm run build"
 
 [functions]
   directory = "netlify/functions"
