--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@chroma-core/default-embed": "^0.1.8",
+    "@huggingface/inference": "^4.6.1",
     "@langchain/community": "^0.3.49",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
