--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,18 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chroma-core/default-embed": "^0.1.8",
-    "@huggingface/inference": "^4.6.1",
-    "@langchain/community": "^0.3.49",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
-    "chromadb": "^3.0.10",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "serverless-http": "^3.2.0"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
