--- a/backend/package.json
+++ b/backend/package.json
@@ -16,11 +16,16 @@
   "dependencies": {
     "@chroma-core/default-embed": "^0.1.8",
     "@huggingface/inference": "^4.6.1",
+    "@napi-rs/canvas": "^0.1.76",
     "axios": "^1.11.0",
     "chromadb": "^3.0.10",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^5.1.0",
-    "serverless-http": "^3.2.0"
+    "form-data": "^4.0.4",
+    "multer": "^2.0.2",
+    "pdf-parse": "^1.1.1",
+    "serverless-http": "^3.2.0",
+    "tesseract.js": "^6.0.1"
   }
 }
